# synergy

./: .gitignore  hm.cmd
src/: CMakeLists.txt
src/gui/res/: MainWindowBase.ui  ScreenSettingsDialogBase.ui
src/gui/src/: BaseConfig.h  MainWindow.cpp  MainWindow.h  Screen.cpp  Screen.h  ScreenSettingsDialog.cpp  ScreenSettingsDialog.h  ZeroconfRegister.h  ZeroconfService.h
src/lib/plugin/ns/: SecureSocket.cpp
src/lib/server/: Config.cpp  Server.cpp  Server.h
